Add reset button

--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
       <!-- Your markup goes in here -->
 
     </div>
+    <div id="reset"></div>
   </div>
 
   <script type="text/javascript">
     var mockup = new Mockup();
-    var timeline = new Timeline();
+    mockup.init();
 
     // Your JS goes in here
 
